Rearranged sections, added table of contents, placeholders.

--- a/tip/477.md
+++ b/tip/477.md
@@ -7,8 +7,44 @@
 	Post-History:   
 	Keywords:       Windows nmake build
 -----
+<!-- TOC BEGIN -->
+* <a href='#toc-2'>Abstract</a>
+* <a href='#toc-3'>Background and Rationale</a>
+    * <a href='#toc-4'>Avoiding duplication of code</a>
+    * <a href='#toc-5'>Simplifying extension makefiles</a>
+    * <a href='#toc-6'>Auditing compiler configuration</a>
+    * <a href='#toc-7'>Non-goals</a>
+* <a href='#toc-8'>Command line interface</a>
+    * <a href='#toc-9'>Build configuration macros</a>
+* <a href='#toc-10'>Basic makefiles</a>
+    * <a href='#toc-11'>Makefile for a basic Tcl extension</a>
+    * <a href='#toc-12'>Makefile for a basic Tk extension</a>
+* <a href='#toc-13'>The nmake build environment</a>
+    * <a href='#toc-14'>The `rules-ext.vc` file</a>
+    * <a href='#toc-15'>The `nmakehlp.c` program</a>
+    * <a href='#toc-16'>The `rules.vc` file</a>
+    * <a href='#toc-17'>The `targets.vc` file</a>
+    * <a href='#toc-18'>Distributing the nmake build system</a>
+* <a href='#toc-19'>Locating Tcl and Tk</a>
+* <a href='#toc-20'>Customizing and extending the build environment</a>
+    * <a href='#toc-21'>Location of extension sources and implicit rules</a>
+    * <a href='#toc-22'>Output directories and file names</a>
+    * <a href='#toc-23'>Implicit rules</a>
+    * <a href='#toc-24'>Compiler and link flags</a>
+    * <a href='#toc-25'>Windows resource files</a>
+    * <a href='#toc-26'>Generating pkgIndex.tcl</a>
+    * <a href='#toc-27'>Standard targets</a>
+        * <a href='#toc-28'>Extending target</a>
+    * <a href='#toc-29'>Stubs</a>
+    * <a href='#toc-30'>Versioning</a>
+    * <a href='#toc-31'>Installation</a>
+    * <a href='#toc-32'>Sanity checking build configuration</a>
+* <a href='#toc-33'>Reference Implementation</a>
+* <a href='#toc-34'>Copyright</a>
 
-# Abstract
+<!-- TOC END -->
+
+# <a id='toc-2'></a>Abstract
 
 Tcl, Tk and extensions are currently built using one of two build
 systems - the Tcl Extension Architecture (TEA) and the
@@ -19,7 +55,7 @@ and maintenance of extensions.
 
 This TIP also serves as the documentation of the reworked nmake build system.
 
-# Background and Rationale
+# <a id='toc-3'></a>Background and Rationale
 
 The current nmake-based build system is based on three files in the
 `win` directory of a project.
@@ -40,7 +76,7 @@ duplication of code making maintenance difficult, unnecessarily
 verbose extension makefiles, and inconsistent application of compiler
 options.
 
-## Avoiding duplication of code
+## <a id='toc-4'></a>Avoiding duplication of code
 
 In principle, `rules.mk` and `nmakehlp.c` should be shared across Tcl,
 Tk and all extensions. In practice, each has its own copy leading to
@@ -56,7 +92,7 @@ The first goal is therefore to *allow each extension, including Tk,
 to be built off Tcl's master copy (either installed or from source)
 without having to maintain its own*.
 
-## Simplifying extension makefiles
+## <a id='toc-5'></a>Simplifying extension makefiles
 
 In addition, creating a `makefile.vc` for even a simple extension
 involves a lot of unnecessary boilerplate leading to
@@ -87,7 +123,7 @@ write a resource definition file.
 For more complex extensions, the build system should be incrementally
 customizable using "building blocks".
 
-## Auditing compiler configuration
+## <a id='toc-6'></a>Auditing compiler configuration
 
 There are some bugs, inconsistencies and misconfiguration of compiler
 options in the various incarnations of the extension
@@ -99,7 +135,7 @@ on.
 Therefore, *a standard set of documented `nmake` macros are defined to
 ensure consistency across build configurations*.
 
-## Non-goals
+## <a id='toc-7'></a>Non-goals
 
 It is not the intent of this TIP to look at alternatives to
 nmake. There is already the TEA based system for those who prefer to
@@ -109,7 +145,7 @@ Certain limitations in the current nmake system, in particular
 the requirement that there be no spaces in the source directories path
 are not addressed.
 
-# Command line interface
+# <a id='toc-8'></a>Command line interface
 
 There will be no changes to the command line interface used to build
 Tcl and extensions using nmake except for removal of some obsolete
@@ -122,7 +158,7 @@ also has standard predefined targets that makes it unnecessary for the
 extension makefile to define targets in many common cases. These
 are detailed later.
 
-## Build configuration macros
+## <a id='toc-9'></a>Build configuration macros
 
 The macros passed on the command line are for the most part the same
 as in the current system. They specify the build configuration such as
@@ -172,25 +208,96 @@ of deprecated functions.
 >
     nmake /f makefile.vc OPTS=static,pdbs STATS=memdbg CHECKS=nodep,fullwarn
 
-# Specification
+# <a id='toc-10'></a>Basic makefiles
 
-## Distributing the nmake build system
+## <a id='toc-11'></a>Makefile for a basic Tcl extension
 
-To eliminate the issue of divergence between the nmake support files
-as well as the need for continual maintenance and update, the files
-`rules.vc`, `nmakehlp.c` and `targets.vc` will be installed as part
-of a Tcl install in a similar fashion to `tclconfig.sh`,
-`tclstub86.lib` etc. except that they will be placed in the
-`lib\nmake` subdirectory under the Tcl installation's root directory.
+**NOTE:** By convention, makefiles using the nmake system are named
+`makefile.vc`. Here we refer to them simply as makefile.
 
-These files will also be copied to each extension's source repository
-as is (supposed to be) done today. *However, this is only a one-time
-copy and unlike the current system, it is not required to be done
-every time Tcl's version of these files change.* This also allows the
-extension to be built against older versions of Tcl that do not
-include these files in their installation.
+In the simplest case, a Tcl extension follows the common convention
+where sources are stored in the subdirectories `generic`, `win` and `compat`
+(not necessarily all). For such an extension, the following serves
+as a complete makefile.
 
-## The `rules-ext.vc` file
+>
+	PROJECT=sample
+	!include "rules-ext.vc"
+	PRJ_OBJS = $(TMP_DIR)\sample.obj \
+	               $(TMP_DIR)\util.obj \
+	!endif
+	!include "targets.vc"
+
+The lines must be in the order shown with `PROJECT` defined before
+inclusion of `rules-ext.vc` and `PRJ_OBJS` after. The standard
+targets, defined in `targets.vc`, are included last.
+
+Given the above, the commands
+
+>
+	nmake /f makefile.vc INSTALLDIR=/path/to/tcl
+	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=static
+	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=debug
+	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=static,debug
+
+will 
+
+* build shared, static and debug versions of the
+extension depending on the specified `OPTS` macro
+
+* create an appropriate `pkgIndex.tcl` file
+
+* generate and embed Windows version resource in the binaries.
+
+Note the extension author need not write `pkgIndex.tcl`
+or Windows resource definition file unless there is some custom need.
+
+In addition, standard targets for installation
+and clean up are also included so for example
+
+>
+    nmake /f makefile.vc INSTALLDIR=/path/to/tcl install
+    
+will install the extension while 
+
+>
+    nmake /f makefile.vc INSTALLDIR=/path/to/tcl clean
+    nmake /f makefile.vc INSTALLDIR=/path/to/tcl realclean
+
+will do various levels of cleaning.
+
+The two macros that need to be defined are shown below.
+
+>
+Macro|Description
+-----|-----------
+`PROJECT`|Name of the package. Must be defined before including `rules-ext.vc`.
+`PRJ_OBJS`|List of object and resource files for building the extension. The object files must be prefixed with `$(TMP_DIR)\` exactly as shown above.
+
+## <a id='toc-12'></a>Makefile for a basic Tk extension
+
+In case of a Tk extension, the only change required is to set
+the `PROJECT_REQUIRES_TK` macro before including `rules-ext.vc`.
+
+>
+	PROJECT=sample
+	PROJECT_REQUIRES_TK = 1
+	!include "rules-ext.vc"
+	PRJ_OBJS = $(TMP_DIR)\sample.obj \
+	               $(TMP_DIR)\util.obj \
+	!endif
+	!include "targets.vc"
+
+Note that the **value** of the macro is immaterial (may even be `0`),
+it only needs to be defined. All else remains the same as for a Tcl extension.
+
+# <a id='toc-13'></a>The nmake build environment
+
+The `nmake` build environment described above is implemented through 
+four files `rules-ext.vc`, `rules.vc`, `targets.vc` and 
+`nmakehlp.c`. The role of each is described in this section.
+
+## <a id='toc-14'></a>The `rules-ext.vc` file
 
 The `rules-ext.vc` file is intended to be included by the extension's
 makefile to locate and load the latest compatible `rules.vc` file.  It
@@ -208,13 +315,13 @@ treated. When comparing versions, the files in the Tcl installation
 are used if they have the same major version as that in the
 extension's rules file and their minor version is the equal or greater. 
 
-## The `nmakehlp.c` program
+## <a id='toc-15'></a>The `nmakehlp.c` program
 The `nmakehlp.c` program has the same purpose and functionality as in
 the current system. It is unchanged and not detailed here. It is 
 compiled and invoked on the fly from nmake for some utility purposes
 such as extracting versions, searching for strings etc.
 
-## The `rules.vc` file
+## <a id='toc-16'></a>The `rules.vc` file
 
 This is the heart of the current nmake system and remains so, with
 enhancements to include as much of project-independent functionality
@@ -237,7 +344,7 @@ will have unmodified copies of this if they need to be build against
 older versions of Tcl. Otherwise, they will use the one installed with
 Tcl or from the Tcl sources if building against the latter.
 
-## The `targets.vc` file
+## <a id='toc-17'></a>The `targets.vc` file
 
 This file, optionally included by the extension's master makefile,
 defines some standard targets that relieves the extension from having
@@ -245,60 +352,23 @@ to define its own. It is separated from `rules.vc` so as to permit
 master makefile to modify macros set by `rules.vc` before they
 are expanded in the target rules.
 
-## Makefile for a basic Tcl extension
+## <a id='toc-18'></a>Distributing the nmake build system
 
-**NOTE:** By convention, makefiles using the nmake system are named
-`makefile.vc`. Here we refer to them simply as makefile.
+To eliminate the issue of divergence between the nmake support files
+as well as the need for continual maintenance and update, the files
+`rules.vc`, `nmakehlp.c` and `targets.vc` will be installed as part
+of a Tcl install in a similar fashion to `tclconfig.sh`,
+`tclstub86.lib` etc. except that they will be placed in the
+`lib\nmake` subdirectory under the Tcl installation's root directory.
 
-As stated earlier, in the simplest case, the following serves as a
-complete makefile for a Tcl extension.
+These files will also be copied to each extension's source repository
+as is (supposed to be) done today. *However, this is only a one-time
+copy and unlike the current system, it is not required to be done
+every time Tcl's version of these files change.* This also allows the
+extension to be built against older versions of Tcl that do not
+include these files in their installation.
 
->
-	PROJECT=sample
-	!include "rules-ext.vc"
-	PRJ_OBJS = $(TMP_DIR)\sample.obj \
-	               $(TMP_DIR)\util.obj \
-	!endif
-	!include "targets.vc"
-
-Only two macros need be defined to build an Tcl extension with an
-additional one required for a Tk extension.
-
->
-Macro|Description
------|-----------
-`PROJECT`|Name of the package. Must be defined before including `rules-ext.vc`.
-`PRJ_OBJS`|List of object and resource files for building the extension. The object files must be prefixed with `$(TMP_DIR)\` exactly as shown above.
-`PROJECT_REQUIRES_TK`|Define as `1` before including `rules-ext.vc` if the extension is a Tk extension. Do **not** define for a Tcl-only extension.
-
-The lines must be in the order shown with `PROJECT` defined before
-inclusion of `rules-ext.vc` and `PROJECT_OBJS` after. The standard
-targets, defined in `targets.vc`, are included last.
-
-This suffices to generate shared, static and debug versions of the
-extension by invoking `nmake` as
-
->
-	nmake /f makefile.vc INSTALLDIR=/path/to/tcl
-	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=static
-	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=debug
-
-respectively. In addition, it also includes targets for installation
-so that
-
->
-    nmake /f makefile.vc INSTALLDIR=/path/to/tcl install
-
-will install the extension including generation of a pkgIndex.tcl
-file if necessary. Additional other targets are described later.
-
-In case of a Tk extension, the following line is needed
-before including `rules-ext.vc`.
-
->
-    PROJECT_REQUIRES_TK = 1
-
-## Location of Tcl and Tk directories
+# <a id='toc-19'></a>Locating Tcl and Tk
 
 Building an extension requires Tcl, and optionally Tk, header files
 and libraries. The nmake build system locates directories in the
@@ -338,8 +408,36 @@ built against Tcl sources. For Tk extensions, the macro `TKINSTALL` is
 set similarly depending on whether the extension is being built
 against an installed Tk or against Tk sources.
 
+# <a id='toc-20'></a>Customizing and extending the build environment
 
-## Location of extension sources and implicit rules
+It is hoped that the basic makefile structure described earlier will
+suffice for the majority of extensions which follow standard conventions
+of source directory location etc. However, extensions may diverge from
+convention for several reasons.
+
+* The source subdirectories may not be named `generic`, `compat` etc.
+
+* Additional options, include paths, libraries etc. may need to be
+  passed to the compiler and / or linker
+
+* The makefile may build multiple extensions and programs. The author
+does not recommend this as it has few advantages over independent
+makefiles.
+
+* It may need customized `pkgIndex.tcl` or Windows version resources.
+
+* It may provide its own stubs interface.
+
+* The installation may need added functionality such as installation
+of documentation, demo applications etc.
+
+* And so on.
+
+These all require different levels of customization and extension and
+the nmake system tries to accomodate these with minimal effort as
+described in the following sections.
+
+## <a id='toc-21'></a>Location of extension sources and implicit rules
 
 The basic makefile shown earlier assumes the following directory
 structure for the extension sources:
@@ -389,7 +487,7 @@ Here `cc32` and `pkgcflags` are standard macros defined within
 The `DOCDIR`, `DEMODIR` and `TOOLSDIR` macros are only defined
 as conveniences for the parent makefile.
 
-## Output directories and file names
+## <a id='toc-22'></a>Output directories and file names
 
 Based on the options specified on the command line, compiler version
 and target architecture, the following macros are defined:
@@ -407,19 +505,27 @@ in inclusion of architecture is historical).
 The object files directory path placed in `TMP_DIR` has the form
 
 
-## Implicit rules
+## <a id='toc-23'></a>Implicit rules
 
 TBD
 
-## Compiler and link flags
+## <a id='toc-24'></a>Compiler and link flags
 
 TBD
 
-## Windows resource files
+## <a id='toc-25'></a>Windows resource files
 
 TBD
 
-## TBD - extending targets
+## <a id='toc-26'></a>Generating pkgIndex.tcl
+
+## <a id='toc-27'></a>Standard targets
+
+TBD 
+
+### <a id='toc-28'></a>Extending target
+
+TBD 
 
 There will be cases where the above does not suffice. For example,
 the default rules do not generate and install
@@ -444,12 +550,33 @@ encapsulate the compiler and linker options to be used.
 The next few sections go into more detail about using the nmake build
 system and its customization.
 
+## <a id='toc-29'></a>Stubs
 
-# Reference Implementation
+TBD - using stubs
+
+TBD - generating stubs
+
+## <a id='toc-30'></a>Versioning
+
+TBD - defaults to TEA
+
+TBD - DOTVERSION, VERSION
+
+## <a id='toc-31'></a>Installation
+
+Installation macros
+
+## <a id='toc-32'></a>Sanity checking build configuration
+
+TBD 
+
+# <a id='toc-33'></a>Reference Implementation
 
 The vc-reform branch in the core.tcl.tk repositories contains work-in-progress.
 
-# Copyright
+
+
+# <a id='toc-34'></a>Copyright
 
 This document has been placed in the public domain.
 
