Added sections pertaining to targets

--- a/tip/477.md
+++ b/tip/477.md
@@ -33,14 +33,18 @@
     * <a href='#toc-24'>Compiler and link flags</a>
     * <a href='#toc-25'>Windows resource files</a>
     * <a href='#toc-26'>Generating pkgIndex.tcl</a>
-    * <a href='#toc-27'>Standard targets</a>
-        * <a href='#toc-28'>Extending target</a>
-    * <a href='#toc-29'>Stubs</a>
-    * <a href='#toc-30'>Versioning</a>
-    * <a href='#toc-31'>Installation</a>
-    * <a href='#toc-32'>Sanity checking build configuration</a>
-* <a href='#toc-33'>Reference Implementation</a>
-* <a href='#toc-34'>Copyright</a>
+    * <a href='#toc-27'>Targets</a>
+        * <a href='#toc-28'>Predefined targets</a>
+        * <a href='#toc-29'>The default target</a>
+        * <a href='#toc-30'>Standard targets</a>
+        * <a href='#toc-31'>Extending targets</a>
+        * <a href='#toc-32'>Ignoring standard targets</a>
+    * <a href='#toc-33'>Stubs</a>
+    * <a href='#toc-34'>Versioning</a>
+    * <a href='#toc-35'>Installation</a>
+    * <a href='#toc-36'>Sanity checking build configuration</a>
+* <a href='#toc-37'>Reference Implementation</a>
+* <a href='#toc-38'>Copyright</a>
 
 <!-- TOC END -->
 
@@ -119,6 +123,7 @@ write a resource definition file.
 	PRJ_OBJS = $(TMP_DIR)\sample.obj \
 	               $(TMP_DIR)\util.obj
 	!include "targets.vc"
+	pkgindex: default-pkgindex
 
 For more complex extensions, the build system should be incrementally
 customizable using "building blocks".
@@ -227,6 +232,7 @@ as a complete makefile.
 	               $(TMP_DIR)\util.obj \
 	!endif
 	!include "targets.vc"
+	pkgindex: default-pkgindex
 
 The lines must be in the order shown with `PROJECT` defined before
 inclusion of `rules-ext.vc` and `PRJ_OBJS` after. The standard
@@ -266,7 +272,7 @@ will install the extension while
 
 will do various levels of cleaning.
 
-The two macros that need to be defined are shown below.
+The two macros that need to be defined for a basic extension are shown below.
 
 >
 Macro|Description
@@ -277,7 +283,7 @@ Macro|Description
 ## <a id='toc-12'></a>Makefile for a basic Tk extension
 
 In case of a Tk extension, the only change required is to set
-the `PROJECT_REQUIRES_TK` macro before including `rules-ext.vc`.
+the `PROJECT_REQUIRES_TK` macro to `1` before including `rules-ext.vc`.
 
 >
 	PROJECT=sample
@@ -287,9 +293,9 @@ the `PROJECT_REQUIRES_TK` macro before including `rules-ext.vc`.
 	               $(TMP_DIR)\util.obj \
 	!endif
 	!include "targets.vc"
+	pkgindex: default-pkgindex
 
-Note that the **value** of the macro is immaterial (may even be `0`),
-it only needs to be defined. All else remains the same as for a Tcl extension.
+All else remains the same as for a Tcl extension.
 
 # <a id='toc-13'></a>The nmake build environment
 
@@ -346,11 +352,14 @@ Tcl or from the Tcl sources if building against the latter.
 
 ## <a id='toc-17'></a>The `targets.vc` file
 
-This file, optionally included by the extension's master makefile,
+This file, *optionally* included by the extension's master makefile,
 defines some standard targets that relieves the extension from having
 to define its own. It is separated from `rules.vc` so as to permit
 master makefile to modify macros set by `rules.vc` before they
 are expanded in the target rules.
+
+Inclusion of this file is optional in the sense that more complex
+makefiles may choose to define their own standard targets.
 
 ## <a id='toc-18'></a>Distributing the nmake build system
 
@@ -452,11 +461,13 @@ Subdirectory|Macro|Description
 `demos`|`DEMODIR`|Directory containing any demo files.
 `tools`|`TOOLSDIR`|Directory containing any build tools.
 
-Only the `GENERICDIR`, `WINDIR` and `COMPATDIR` macros are used 
-by `rules.vc` file. Implicit rules are defined to generate the object
-files corresponding to sources in any of these directories. If the
-source directories are named differently, the corresponding macro
-can be defined appropriately **before** including `rules-ext.vc`.
+Only the `GENERICDIR`, `WINDIR` and `COMPATDIR` macros are used by
+`rules.vc` file and intialized to the above paths if not already
+defined by the parent makefile. Implicit rules are defined to generate
+the object files corresponding to sources in any of these
+directories. If the source directories are named differently, the
+corresponding macro can be defined appropriately **before** including
+`rules-ext.vc`.
 
 So for example, if your generic sources were in directory `src`, the
 makefile would be modified as
@@ -515,19 +526,138 @@ TBD
 
 ## <a id='toc-25'></a>Windows resource files
 
-TBD
+Windows programs and DLL's are expected to have a version resource 
+embedded in them though this is not mandatory. To free the extension
+author from having to write a resource definition file, the nmake
+build system will automatically generate one and embed it into the
+built DLL extension.
+
+If the standard template is not adequate for whatever reason, a custom
+resource definition file may be specified by defining the `RCFILE`
+macro **before** including `rules-ext.vc` in the extension makefile.
+
+>
+    RCFILE = custom.rc
+
+By default, the nmake system will look in the `win` and `win\rc`
+directories for this file. If located elsewhere, define the `RCDIR`
+as the path to the directory where the file is located. Again,
+this must be defined before inclusion of `rules-ext.vc`. For example,
+
+>
+    ...
+    RCDIR = $(ROOT)\rc
+	!include "rules-ext.vc"
+    ...
+
+(`ROOT` is automatically defined as the root of the extension source
+tree.)
+
+All of the above will make use of implicit rules defined in
+`rules.vc`. If more control is desired, for example to pass
+additional flags to the resource compiler, an explicit rule needs
+to be added to the extension makefile **after** including
+`rules-ext.vc`. For example,
+
+>
+    $(TMP_DIR)\custom.res: $(RCDIR)\custom.rc
+	    $(MAKERESCMD) /DCUSTOMFLAG=1 $<
+		
+Note the use of `TMP_DIR` and `RCDIR` in the dependency. The 
+`MAKERESCMD` macro defines the command and associated standard flags to 
+compile a resource definition file.
 
 ## <a id='toc-26'></a>Generating pkgIndex.tcl
 
-## <a id='toc-27'></a>Standard targets
+The standard default `install` target expects a `pkgIndex.tcl` file to have
+been generated and placed in the `$(OUT_DIR)` output directory. It
+then copies this into the extension's installation directory as part
+of the install. To generate this file, the top level target that
+builds the project has a dependency on the `pkgindex` target which
+is responsible for generating this file.
 
-TBD 
+For a pure binary extension (without any additional Tcl script files), the
+following line added after including `targets.vc`
 
-### <a id='toc-28'></a>Extending target
+>
+    pkgindex: default-pkgindex
+	
+will generate this file with no additional work required on the
+author's part.
 
-TBD 
+Alternately, if there is a `pkgIndex.tcl.in` file in the extension
+root directory that is used with the TEA build environment, the
+`default-pkgindex-tea` target can be used instead.
 
-There will be cases where the above does not suffice. For example,
+>
+    pkgindex: default-pkgindex-tea
+	
+In this case, the `pkgIndex.tcl` is generated from `pkgIndex.tcl.in`
+by replacing all occurences of `@PACKAGE_VERSION@`, `@PACKAGE_NAME@`
+and `@PKG_LIB_FILE@` with the values of macros `$(DOTVERSION)`,
+`$(PROJECT)` and `$(PRJLIBNAME)` respectively.
+
+For all other cases, the extension author needs to write their own
+target commands for `pkgindex` that results in a `pkgIndex.tcl` file
+being placed in the `$(OUT_DIR)` directory.
+
+## <a id='toc-27'></a>Targets
+
+### <a id='toc-28'></a>Predefined targets
+
+Since most extensions build commands in a similar fashion, the
+`rules.vc` file provides some predefined targets that encapsulate the
+requisite commands. These are shown in the table below.
+
+>
+Target|Description
+------|-----------
+`default-pkgindex`|Generates a `pkgIndex.tcl` file for a pure binary extension in the output directory.
+`default-pkgindex-tea`|Generates a `pkgIndex.tcl` file in the output directory using a TEA `pkgIndex.tcl.in` file as a template.
+`default-install`|Combines `default-install-binaries` and `default-install-libraries`.
+`default-install-binaries`|Copies the generated binary extension to the installation directory.
+`default-install-libraries`|Copies all `*.tcl` files from `$(LIBDIR)`, if it exists, to the installation directory.
+`default-clean`|Cleans up `$(TMP_DIR)` but not `$(OUT_DIR)`
+`default-hose`|Cleans up `$(OUT_DIR)` which normally also includes `$(TMP_DIR)`
+`default-distclean`|Maps to `default-hose` plus cleans up `nmakehlp` helpers.
+`default-setup`|Does common build initialization like creation of output directories.
+
+
+### <a id='toc-29'></a>The default target
+
+If unspecified on the command line, the default target is assumed to be 
+`$(PROJECT)`. To change this, define the macro `DEFAULT_BUILD_TARGET`
+before including `rules-ext.vc`. For example,
+
+>
+    DEFAULT_BUILD_TARGET = release
+	
+Note you have to define the target yourself unless it is predefined or 
+standard.
+
+### <a id='toc-30'></a>Standard targets
+
+Inclusion of the file `targets.vc` defines "standard" targets commonly
+defined in makefiles and shown in the table below. These generally
+map to the predefined targets described earlier but can be extended as
+discussed in the next section.
+
+>
+Target|Description
+------|-----------
+`install`|Maps to `default-install`.
+`clean`|Maps to `default-clean`.
+`hose`|Maps to `default-hose`.
+`realclean`|Same as `hose`.
+`distclean`|Maps to `default-distclean`.
+
+
+### <a id='toc-31'></a>Extending targets
+
+In some cases, the standard targets "almost" suffice but are missing
+some additional actions. In such cases, instead of not including the
+`targets.vc` file and defining your standard targets, you can extend
+the standard targets by adding dependencies. For example,
 the default rules do not generate and install
 documentation as Tcl extensions do not have a common format and
 structure for the same. In simple cases like this, the appropriate
@@ -535,48 +665,63 @@ target can be extended with additional commands:
 
 >
     install: install-docs
-    $(CPY) $(DOCDIR)\*.html "$(DOC_INSTALL_DIR)"
+    install-docs:
+	    $(CPY) $(DOCDIR)\*.html "$(DOC_INSTALL_DIR)"
 
 Note `CPY`, `DOCDIR` and `DOC_INSTALL_DIR` are all predefined or
 computed macros within rules.vc.
 
-In more complicated cases, the default make rules can be customized
-through definition of macros that control it before including the
-`rules-ext.vc` file in the parent makefile. In the extreme case,
-the parent makefile can ignore the implicit rules and targets defined
-by the system and simply make use of a standard set macros that
-encapsulate the compiler and linker options to be used.
+### <a id='toc-32'></a>Ignoring standard targets
 
-The next few sections go into more detail about using the nmake build
-system and its customization.
+In the extreme case, the standard targets can be completely ignored
+by the extension makefile by not including `targets.vc`. Note the
+built-in targets can still be accessed as `default-install` etc. as
+these are defined within `rules.vc`, not `targets.vc`. This is useful
+if for example, you wish to override the targets for building but
+use the default cleanup. In such a case, instead of including
+`targets.vc` the following targets can be defined in the extension
+makefile.
 
-## <a id='toc-29'></a>Stubs
+>
+    $(PRJLIB):
+	    ...Your custom build command to build the extension...
+    install: default-install
+    clean: default-clean
+	hose: default-hose
+
+As an aside, when defining your own commands for building targets, you
+are strongly encouraged to make use of the predefined compiler 
+and linker flags such as `$(pkgcflags)` etc. described elsewhere.
+
+## <a id='toc-33'></a>Stubs
 
 TBD - using stubs
 
 TBD - generating stubs
 
-## <a id='toc-30'></a>Versioning
+## <a id='toc-34'></a>Versioning
 
 TBD - defaults to TEA
 
 TBD - DOTVERSION, VERSION
 
-## <a id='toc-31'></a>Installation
+## <a id='toc-35'></a>Installation
 
-Installation macros
+Installation macros (SCRIPT_INSTALL_DIR etc.)
 
-## <a id='toc-32'></a>Sanity checking build configuration
+## <a id='toc-36'></a>Sanity checking build configuration
 
 TBD 
 
-# <a id='toc-33'></a>Reference Implementation
+# <a id='toc-37'></a>Reference Implementation
 
 The vc-reform branch in the core.tcl.tk repositories contains work-in-progress.
 
 
 
-# <a id='toc-34'></a>Copyright
+# <a id='toc-38'></a>Copyright
 
 This document has been placed in the public domain.
+
+
 
